...
                  );
                },
              ),
      ),
      floatingActionButton: widget.isOwner && _event?.status!="Past"
          ? FloatingActionButton(
              key: const Key('AddGiftButton'), // For Testing
              onPressed: () {
                if(_event?.status=="Past")
                  {
                    return; // If users tries to add when Past
                  }
                Navigator.push(
...
      mainAxisSize: MainAxisSize.min,
      children: [
        if (!widget.isOwner && !gift.isPledged && widget.eventStatus != "Past")
          ElevatedButton(
            onPressed: () => _pledgeGift(gift),
            style: ElevatedButton.styleFrom(backgroundColor: Colors.amber[800]),
            child: const Text('Pledge', style: TextStyle(color: Colors.white)),
          ),
        const SizedBox(width: 8.0),
        if (widget.isOwner && !gift.isPledged && widget.eventStatus != "Past")
          IconButton(
            icon: const Icon(Icons.edit),
            onPressed: () {
...
